Bug 282236 - Composer: Formatting shortcuts erroneously activate formatting
Summary: Composer: Formatting shortcuts erroneously activate formatting
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 301214 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-17 19:56 UTC by Nicolas Dietrich
Modified: 2015-03-01 13:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Dietrich 2011-09-17 19:56:43 UTC
Version:           unspecified (using KDE 4.6.5) 
OS:                Linux

Using a shortcut for a formatting option from inside the composer, e.g. Ctrl-L for "strike through" activates formatting, in case formatting isn't already turned on. This seems to be designed as a feature, but is rather a bug.

Interestingly, the actual shortcut action (in this case "activate strike through") isn't performed.

Thanks for fixing!

Reproducible: Always

Steps to Reproduce:
1. Make sure kmail composer starts in non-formatting mode.
2. Compose Email
3. Press Ctrl-L (shortcut for strike-through)

Actual Results:  
Formatting is turned on. Strike-through isn't activated.

Expected Results:  
Either of the following would be 

1. Nothing (okay)

2. Dialog popup stating: 'Using strike through only make sense when formatting option is turned on. Turning this option on results in email messages sent in HTML format. Do you want to turn formatting on? Yes / No' (preferred)

3. Turn on formatting and activate strike-through. (please don't, I keep on pressing this...)

This happens only after initially opening a composer in non-formatting mode, but not after manually deactivating the formatting option.
Comment 1 Laurent Montel 2011-09-19 07:02:36 UTC
I confirm it.
Will fix it
Comment 2 Laurent Montel 2011-09-19 07:18:27 UTC
Git commit c200bf630aea5be26d757351a58219b9088d0d5a by Montel Laurent.
Committed on 19/09/2011 at 09:17.
Pushed by mlaurent into branch 'master'.

Fix Bug 282236 - Composer: Formatting shortcuts erroneously activate formatting

FIXED-IN: 4.7.2
BUG: 282236

M  +4    -0    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/c200bf630aea5be26d757351a58219b9088d0d5a
Comment 3 Laurent Montel 2011-09-19 07:19:46 UTC
Git commit 62e866979d37fc8159b2141052af7f828d519ec1 by Montel Laurent.
Committed on 19/09/2011 at 09:17.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 282236 - Composer: Formatting shortcuts erroneously activate formatting

FIXED-IN: 4.7.2
BUG: 282236
(cherry picked from commit c200bf630aea5be26d757351a58219b9088d0d5a)

M  +4    -0    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/62e866979d37fc8159b2141052af7f828d519ec1
Comment 4 Pali Rohár 2015-03-01 13:52:36 UTC
*** Bug 301214 has been marked as a duplicate of this bug. ***