Fix Bug 282236 - Composer: Formatting shortcuts erroneously activate formatting

FIXED-IN: 4.7.2
BUG: 282236